--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,10 +1,11 @@
 // COLORS
-$primary-color: #0a199e;
-$secondary-color: #615fe2;
+$primary-color: #0208b0;
+$secondary-color: #0085cd;
 
 $white-color: #fff;
 
 $dark-grey: #333333;
+$light-grey: #d2d2d2;
 
 $dark-blue-text: #272341; // For Headings
 
