--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -9,7 +9,7 @@
   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.6s;
 
   &::after {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     width: 0px;
@@ -23,21 +23,33 @@
 
 /* Hero Style */
 .cta-btn--hero {
-  background-image: linear-gradient(
+  @include supportColorForIE11();
+  border-width: 2px;
+  border-style: solid;
+  -moz-border-image: -moz-linear-gradient(
     135deg,
     $primary-color 0%,
     $secondary-color 100%
   );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  border: 2px solid transparent;
+  -webkit-border-image: -webkit-linear-gradient(
+    135deg,
+    $primary-color 0%,
+    $secondary-color 100%
+  );
   border-image: linear-gradient(
     135deg,
     $primary-color 0%,
     $secondary-color 100%
   );
+  -webkit-border-image-slice: 1;
   border-image-slice: 1;
-  // Responsive Button hero style
+  @include supportIE11() {
+    color: $secondary-color !important;
+    &:hover {
+      color: $white-color !important;
+    }
+  }
+
   @include respond(phone) {
     background-image: none;
     border: 2px solid $secondary-color;
@@ -50,7 +62,7 @@
       $primary-color 0%,
       $secondary-color 100%
     );
-    // Responsive Button hero style
+
     @include respond(phone) {
       background-image: none;
     }
@@ -59,7 +71,7 @@
   &:hover {
     -webkit-text-fill-color: $white-color;
     text-decoration: none;
-    // Responsive Button hover hero style
+
     @include respond(phone) {
       -webkit-text-fill-color: $secondary-color;
     }
