--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -8,13 +8,13 @@
   }
 
   &__text {
-    color: darken(white, 50%);
+    color: darken($white-color, 50%);
     font-size: 1.3rem;
 
     a {
-      color: darken(white, 50%);
+      color: darken($white-color, 50%);
       font-size: 1.3rem;
-      transition: all 0.2s;
+      transition: all 0.4s;
       display: inline-block;
       background-color: $dark-grey;
 
@@ -23,18 +23,15 @@
         color: $primary-color;
         -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
         box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-        font-weight: 700;
-        transform: rotate(5deg) scale(1.3) !important;
       }
     }
   }
 
   & hr {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin: 1rem auto;
     border: 0;
     width: 50%;
-    border-top: 2px solid rgba(255, 255, 255, 0.1);
+    border-top: 2px solid grey;
   }
 }
 
