--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -7,7 +7,6 @@
   );
   color: $white-color;
   height: 100%;
-  margin-top: 100vh;
   border-top: 0px;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
@@ -30,11 +29,11 @@
       align-items: center;
       justify-content: center;
 
-      @include respond(tab-port) {
-        padding-bottom: 6.4rem;
-      }
       @include respond(tab-land) {
         height: 100%;
+      }
+      @include respond(tab-port-sm) {
+        padding-bottom: 6.4rem;
       }
     }
 
@@ -44,15 +43,17 @@
       justify-content: center;
       flex-direction: column;
 
+      @include respond(tab-port-sm) {
+        align-items: center;
+      }
+
       &-text {
         text-align: left;
 
         @include respond(tab-port) {
-          font-size: 1.5rem;
-          text-align: center;
+          text-align: left;
         }
-        @include respond(phone) {
-          font-size: 1.6rem;
+        @include respond(tab-port-sm) {
           text-align: center;
         }
 
